omextra/parsing/_antlr/MinisqlParser.py
# type: ignore
# ruff: noqa
# flake8: noqa
# @omlish-generated
# Generated from Minisql.g4 by ANTLR 4.13.2
# encoding: utf-8
from omlish.text.antlr._runtime._all import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MinisqlParser ( Parser ):

    grammarFileName = "Minisql.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "','", "'('", "')'", "'*'", "'::'", 
                     "'.'", "'='", "'!='", "'<>'", "'<'", "'<='", "'>'", 
                     "'>='", "'+'", "'-'", "'/'", "'%'", "'||'", "'all'", 
                     "'and'", "'as'", "'asc'", "'by'", "'case'", "'cross'", 
                     "'desc'", "'distinct'", "'else'", "'end'", "'false'", 
                     "'from'", "'full'", "'group'", "'having'", "'in'", 
                     "'inner'", "'is'", "'join'", "'left'", "'like'", "'natural'", 
                     "'not'", "'null'", "'on'", "'or'", "'order'", "'outer'", 
                     "'over'", "'right'", "'select'", "'then'", "'true'", 
                     "'union'", "'when'", "'where'", "'with'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "ALL", "AND", "AS", "ASC", "BY", "CASE", "CROSS", 
                      "DESC", "DISTINCT", "ELSE", "END", "FALSE", "FROM", 
                      "FULL", "GROUP", "HAVING", "IN", "INNER", "IS", "JOIN", 
                      "LEFT", "LIKE", "NATURAL", "NOT", "NULL", "ON", "OR", 
                      "ORDER", "OUTER", "OVER", "RIGHT", "SELECT", "THEN", 
                      "TRUE", "UNION", "WHEN", "WHERE", "WITH", "STRING", 
                      "INTEGER_VALUE", "DECIMAL_VALUE", "FLOAT_VALUE", "IDENT", 
                      "QUOTED_IDENT", "COMMENT", "BLOCK_COMMENT", "WS", 
                      "DELIMITER" ]

    RULE_singleStmt = 0
    RULE_select = 1
    RULE_cteSelect = 2
    RULE_cte = 3
    RULE_unionSelect = 4
    RULE_unionItem = 5
    RULE_primarySelect = 6
    RULE_selectItem = 7
    RULE_expr = 8
    RULE_booleanExpr = 9
    RULE_predicate = 10
    RULE_valueExpr = 11
    RULE_primaryExpr = 12
    RULE_simpleExpr = 13
    RULE_caseItem = 14
    RULE_over = 15
    RULE_sortItem = 16
    RULE_relation = 17
    RULE_groupBy = 18
    RULE_qualifiedName = 19
    RULE_identList = 20
    RULE_ident = 21
    RULE_quotedIdent = 22
    RULE_number = 23
    RULE_string = 24
    RULE_null = 25
    RULE_true = 26
    RULE_false = 27
    RULE_setQuantifier = 28
    RULE_joinType = 29
    RULE_cmpOp = 30
    RULE_arithOp = 31
    RULE_unaryOp = 32
    RULE_unquotedIdent = 33

    ruleNames =  [ "singleStmt", "select", "cteSelect", "cte", "unionSelect", 
                   "unionItem", "primarySelect", "selectItem", "expr", "booleanExpr", 
                   "predicate", "valueExpr", "primaryExpr", "simpleExpr", 
                   "caseItem", "over", "sortItem", "relation", "groupBy", 
                   "qualifiedName", "identList", "ident", "quotedIdent", 
                   "number", "string", "null", "true", "false", "setQuantifier", 
                   "joinType", "cmpOp", "arithOp", "unaryOp", "unquotedIdent" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    ALL=20
    AND=21
    AS=22
    ASC=23
    BY=24
    CASE=25
    CROSS=26
    DESC=27
    DISTINCT=28
    ELSE=29
    END=30
    FALSE=31
    FROM=32
    FULL=33
    GROUP=34
    HAVING=35
    IN=36
    INNER=37
    IS=38
    JOIN=39
    LEFT=40
    LIKE=41
    NATURAL=42
    NOT=43
    NULL=44
    ON=45
    OR=46
    ORDER=47
    OUTER=48
    OVER=49
    RIGHT=50
    SELECT=51
    THEN=52
    TRUE=53
    UNION=54
    WHEN=55
    WHERE=56
    WITH=57
    STRING=58
    INTEGER_VALUE=59
    DECIMAL_VALUE=60
    FLOAT_VALUE=61
    IDENT=62
    QUOTED_IDENT=63
    COMMENT=64
    BLOCK_COMMENT=65
    WS=66
    DELIMITER=67

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class SingleStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def select(self):
            return self.getTypedRuleContext(MinisqlParser.SelectContext,0)


        def EOF(self):
            return self.getToken(MinisqlParser.EOF, 0)

        def getRuleIndex(self):
            return MinisqlParser.RULE_singleStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSingleStmt" ):
                listener.enterSingleStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSingleStmt" ):
                listener.exitSingleStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSingleStmt" ):
                return visitor.visitSingleStmt(self)
            else:
                return visitor.visitChildren(self)




    def singleStmt(self):

        localctx = MinisqlParser.SingleStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_singleStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.select()
            self.state = 69
            self.match(MinisqlParser.T__0)
            self.state = 70
            self.match(MinisqlParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SelectContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def cteSelect(self):
            return self.getTypedRuleContext(MinisqlParser.CteSelectContext,0)


        def getRuleIndex(self):
            return MinisqlParser.RULE_select

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelect" ):
                listener.enterSelect(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelect" ):
                listener.exitSelect(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSelect" ):
                return visitor.visitSelect(self)
            else:
                return visitor.visitChildren(self)




    def select(self):

        localctx = MinisqlParser.SelectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_select)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.cteSelect()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CteSelectContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def unionSelect(self):
            return self.getTypedRuleContext(MinisqlParser.UnionSelectContext,0)


        def WITH(self):
            return self.getToken(MinisqlParser.WITH, 0)

        def cte(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MinisqlParser.CteContext)
            else:
                return self.getTypedRuleContext(MinisqlParser.CteContext,i)


        def getRuleIndex(self):
            return MinisqlParser.RULE_cteSelect

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCteSelect" ):
                listener.enterCteSelect(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCteSelect" ):
                listener.exitCteSelect(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCteSelect" ):
                return visitor.visitCteSelect(self)
            else:
                return visitor.visitChildren(self)




    def cteSelect(self):

        localctx = MinisqlParser.CteSelectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_cteSelect)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==57:
                self.state = 74
                self.match(MinisqlParser.WITH)
                self.state = 75
                self.cte()
                self.state = 80
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==2:
                    self.state = 76
                    self.match(MinisqlParser.T__1)
                    self.state = 77
                    self.cte()
                    self.state = 82
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 85
            self.unionSelect()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CteContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ident(self):
            return self.getTypedRuleContext(MinisqlParser.IdentContext,0)


        def AS(self):
            return self.getToken(MinisqlParser.AS, 0)

        def select(self):
            return self.getTypedRuleContext(MinisqlParser.SelectContext,0)


        def getRuleIndex(self):
            return MinisqlParser.RULE_cte

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCte" ):
                listener.enterCte(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCte" ):
                listener.exitCte(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCte" ):
                return visitor.visitCte(self)
            else:
                return visitor.visitChildren(self)




    def cte(self):

        localctx = MinisqlParser.CteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_cte)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.ident()
            self.state = 88
            self.match(MinisqlParser.AS)
            self.state = 89
            self.match(MinisqlParser.T__2)
            self.state = 90
            self.select()
            self.state = 91
            self.match(MinisqlParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UnionSelectContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primarySelect(self):
            return self.getTypedRuleContext(MinisqlParser.PrimarySelectContext,0)


        def unionItem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MinisqlParser.UnionItemContext)
            else:
                return self.getTypedRuleContext(MinisqlParser.UnionItemContext,i)


        def getRuleIndex(self):
            return MinisqlParser.RULE_unionSelect

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnionSelect" ):
                listener.enterUnionSelect(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnionSelect" ):
                listener.exitUnionSelect(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnionSelect" ):
                return visitor.visitUnionSelect(self)
            else:
                return visitor.visitChildren(self)




    def unionSelect(self):

        localctx = MinisqlParser.UnionSelectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_unionSelect)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.primarySelect()
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==54:
                self.state = 94
                self.unionItem()
                self.state = 99
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UnionItemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def UNION(self):
            return self.getToken(MinisqlParser.UNION, 0)

        def primarySelect(self):
            return self.getTypedRuleContext(MinisqlParser.PrimarySelectContext,0)


        def setQuantifier(self):
            return self.getTypedRuleContext(MinisqlParser.SetQuantifierContext,0)


        def getRuleIndex(self):
            return MinisqlParser.RULE_unionItem

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnionItem" ):
                listener.enterUnionItem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnionItem" ):
                listener.exitUnionItem(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnionItem" ):
                return visitor.visitUnionItem(self)
            else:
                return visitor.visitChildren(self)




    def unionItem(self):

        localctx = MinisqlParser.UnionItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_unionItem)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(MinisqlParser.UNION)
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==20 or _la==28:
                self.state = 101
                self.setQuantifier()


            self.state = 104
            self.primarySelect()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrimarySelectContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.where = None # BooleanExprContext
            self.having = None # BooleanExprContext

        def SELECT(self):
            return self.getToken(MinisqlParser.SELECT, 0)

        def selectItem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MinisqlParser.SelectItemContext)
            else:
                return self.getTypedRuleContext(MinisqlParser.SelectItemContext,i)


        def setQuantifier(self):
            return self.getTypedRuleContext(MinisqlParser.SetQuantifierContext,0)


        def FROM(self):
            return self.getToken(MinisqlParser.FROM, 0)

        def relation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MinisqlParser.RelationContext)
            else:
                return self.getTypedRuleContext(MinisqlParser.RelationContext,i)


        def WHERE(self):
            return self.getToken(MinisqlParser.WHERE, 0)

        def GROUP(self):
            return self.getToken(MinisqlParser.GROUP, 0)

        def BY(self, i:int=None):
            if i is None:
                return self.getTokens(MinisqlParser.BY)
            else:
                return self.getToken(MinisqlParser.BY, i)

        def groupBy(self):
            return self.getTypedRuleContext(MinisqlParser.GroupByContext,0)


        def HAVING(self):
            return self.getToken(MinisqlParser.HAVING, 0)

        def ORDER(self):
            return self.getToken(MinisqlParser.ORDER, 0)

        def sortItem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MinisqlParser.SortItemContext)
            else:
                return self.getTypedRuleContext(MinisqlParser.SortItemContext,i)


        def booleanExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MinisqlParser.BooleanExprContext)
            else:
                return self.getTypedRuleContext(MinisqlParser.BooleanExprContext,i)


        def getRuleIndex(self):
            return MinisqlParser.RULE_primarySelect

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrimarySelect" ):
                listener.enterPrimarySelect(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrimarySelect" ):
                listener.exitPrimarySelect(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimarySelect" ):
                return visitor.visitPrimarySelect(self)
            else:
                return visitor.visitChildren(self)




    def primarySelect(self):

        localctx = MinisqlParser.PrimarySelectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_primarySelect)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(MinisqlParser.SELECT)
            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==20 or _la==28:
                self.state = 107
                self.setQuantifier()


            self.state = 110
            self.selectItem()
            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2:
                self.state = 111
                self.match(MinisqlParser.T__1)
                self.state = 112
                self.selectItem()
                self.state = 117
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==32:
                self.state = 118
                self.match(MinisqlParser.FROM)
                self.state = 119
                self.relation(0)
                self.state = 124
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==2:
                    self.state = 120
                    self.match(MinisqlParser.T__1)
                    self.state = 121
                    self.relation(0)
                    self.state = 126
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==56:
                self.state = 129
                self.match(MinisqlParser.WHERE)
                self.state = 130
                localctx.where = self.booleanExpr(0)


            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==34:
                self.state = 133
                self.match(MinisqlParser.GROUP)
                self.state = 134
                self.match(MinisqlParser.BY)
                self.state = 135
                self.groupBy()


            self.state = 140
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==35:
                self.state = 138
                self.match(MinisqlParser.HAVING)
                self.state = 139
                localctx.having = self.booleanExpr(0)


            self.state = 152
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==47:
                self.state = 142
                self.match(MinisqlParser.ORDER)
                self.state = 143
                self.match(MinisqlParser.BY)
                self.state = 144
                self.sortItem()
                self.state = 149
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==2:
                    self.state = 145
                    self.match(MinisqlParser.T__1)
                    self.state = 146
                    self.sortItem()
                    self.state = 151
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SelectItemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MinisqlParser.RULE_selectItem

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ExprSelectItemContext(SelectItemContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MinisqlParser.SelectItemContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(MinisqlParser.ExprContext,0)

        def ident(self):
            return self.getTypedRuleContext(MinisqlParser.IdentContext,0)

        def AS(self):
            return self.getToken(MinisqlParser.AS, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprSelectItem" ):
                listener.enterExprSelectItem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprSelectItem" ):
                listener.exitExprSelectItem(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprSelectItem" ):
                return visitor.visitExprSelectItem(self)
            else:
                return visitor.visitChildren(self)


    class AllSelectItemContext(SelectItemContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MinisqlParser.SelectItemContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAllSelectItem" ):
                listener.enterAllSelectItem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAllSelectItem" ):
                listener.exitAllSelectItem(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAllSelectItem" ):
                return visitor.visitAllSelectItem(self)
            else:
                return visitor.visitChildren(self)



    def selectItem(self):

        localctx = MinisqlParser.SelectItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_selectItem)
        self._la = 0 # Token type
        try:
            self.state = 162
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5]:
                localctx = MinisqlParser.AllSelectItemContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 154
                self.match(MinisqlParser.T__4)
                pass
            elif token in [3, 15, 16, 25, 31, 40, 43, 44, 50, 53, 58, 59, 60, 61, 62, 63]:
                localctx = MinisqlParser.ExprSelectItemContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 155
                self.expr()
                self.state = 160
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & -4610559019004723200) != 0):
                    self.state = 157
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==22:
                        self.state = 156
                        self.match(MinisqlParser.AS)


                    self.state = 159
                    self.ident()


                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def booleanExpr(self):
            return self.getTypedRuleContext(MinisqlParser.BooleanExprContext,0)


        def getRuleIndex(self):
            return MinisqlParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

        localctx = MinisqlParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self.booleanExpr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BooleanExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MinisqlParser.RULE_booleanExpr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class UnaryBooleanExprContext(BooleanExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MinisqlParser.BooleanExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def booleanExpr(self):
            return self.getTypedRuleContext(MinisqlParser.BooleanExprContext,0)

        def NOT(self):
            return self.getToken(MinisqlParser.NOT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnaryBooleanExpr" ):
                listener.enterUnaryBooleanExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnaryBooleanExpr" ):
                listener.exitUnaryBooleanExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnaryBooleanExpr" ):
                return visitor.visitUnaryBooleanExpr(self)
            else:
                return visitor.visitChildren(self)


    class PredicatedBooleanExprContext(BooleanExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MinisqlParser.BooleanExprContext
            super().__init__(parser)
            self._valueExpr = None # ValueExprContext
            self.copyFrom(ctx)

        def valueExpr(self):
            return self.getTypedRuleContext(MinisqlParser.ValueExprContext,0)

        def predicate(self):
            return self.getTypedRuleContext(MinisqlParser.PredicateContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPredicatedBooleanExpr" ):
                listener.enterPredicatedBooleanExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPredicatedBooleanExpr" ):
                listener.exitPredicatedBooleanExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPredicatedBooleanExpr" ):
                return visitor.visitPredicatedBooleanExpr(self)
            else:
                return visitor.visitChildren(self)


    class BinaryBooleanExprContext(BooleanExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MinisqlParser.BooleanExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def booleanExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MinisqlParser.BooleanExprContext)
            else:
                return self.getTypedRuleContext(MinisqlParser.BooleanExprContext,i)

        def AND(self):
            return self.getToken(MinisqlParser.AND, 0)
        def OR(self):
            return self.getToken(MinisqlParser.OR, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBinaryBooleanExpr" ):
                listener.enterBinaryBooleanExpr(self)
